--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <div id="output"></div>
   </div>
 
+  <footer style="text-align:center; margin-top:20px; font-size:14px; color:#555;">
+    Made by Vexosphere
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
