--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
   <footer style="text-align:center; margin-top:20px; font-size:14px; color:#555;">
     Made by Vexosphere
   </footer>
+  <footer style="text-align:center; margin-top:20px; font-size:14px; color:#555;">
+    Hosted and updated by findouticly
+  </footer>
 
   <footer style="text-align:center; margin-top:20px; font-size:50px; color:#ff0000;">
     !!! THERE'S CURRENTLY A BUG WHICH CAN CAUSE THE APPENDS TO NOT WORK. MAKE SURE THE MESSAGE YOU'RE ABOUT TO SEND HAS -- AT THE END OF IT. !!!
