--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     Made by Vexosphere
   </footer>
   <footer style="text-align:center; margin-top:20px; font-size:14px; color:#555;">
-    Hosted and updated by findouticly
+    Maintained by @findouticly on Discord.
   </footer>
 
   <footer style="text-align:center; margin-top:20px; font-size:50px; color:#ff0000;">
