--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     Maintained by @findouticly on Discord.
   </footer>
 
-  <footer style="text-align:center; margin-top:20px; font-size:50px; color:#ff0000;">
-    !!! THERE'S CURRENTLY A BUG WHICH CAN CAUSE THE APPENDS TO NOT WORK. MAKE SURE THE MESSAGE YOU'RE ABOUT TO SEND HAS -- AT THE END OF IT. !!!
+  <footer style="text-align:left; margin-top:20px; font-size:10px; color:#555;">
+    Found a bug? Contact me @findouticly and you'll be put into the credits for helping!
   </footer>
 
 
