--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
     Maintained by @findouticly on Discord.
   </footer>
 
-  <footer style="text-align:left; margin-top:20px; font-size:10px; color:#555;">
+  <footer class="bug-footer">
     Found a bug? Contact me @findouticly and you'll be put into the credits for helping!
   </footer>
+
 
 
   <script src="script.js"></script>
