--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
   <footer style="text-align:center; margin-top:20px; font-size:14px; color:#555;">
-    Made by Vexosphere
+    Made by Vexosphere (@therothea on Discord)
   </footer>
   <footer style="text-align:center; margin-top:20px; font-size:14px; color:#555;">
     Maintained by @findouticly on Discord.
