meow meow meow? meow.
MRRROOWW!

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
   <footer class="bug-footer">
     Found a bug? Contact me @findouticly and you'll be put into the credits for helping!
   </footer>
-
-
-
+<!--
+    /\_/\           ___
+   = o_o =_______    \ \  meowzers! nice code :3
+    __^      __(  \.__) )
+(@)<_____>__(_____)____/
+-->
   <script src="script.js"></script>
-  <!-- Credits modal -->
   <div id="creditsOverlay" class="credits-overlay" onclick="closeCredits()" hidden>
     <div class="credits-modal" onclick="event.stopPropagation()">
       <button class="credits-close" onclick="closeCredits()">✕</button>
