Fixed bug involving suffixes in last blocks
Credits to @hunnycake_ on Discord for reporting.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <li>@vexosphere — project author</li>
         <li>@findouticly — maintainer & bug reports</li>
         <li>@problematickat1 — reported bug with action suffixes</li>
+        <li>@hunnycake_ — reported bug with last blocks getting suffixes</li>
       </ul>
       <p>If you'd like to be added, report a bug.</p>
     </div>
