--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
   <footer class="bug-footer">
     Found a bug? Contact me @findouticly and you'll be put into the credits for helping!
   </footer>
+
+  <footer class="disclaimer-footer">
+  NOT AFFILIATED WITH SCHOOLRP
+  </footer>
+
 <!--
     /\_/\           ___
    = o_o =_______    \ \  meowzers! nice code :3
