Added a Non-affiliation disclaimer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </footer>
 
   <footer class="disclaimer-footer">
-  NOT AFFILIATED WITH SCHOOLRP
+  SRP Append Breaker is an independent project and is not affiliated with SchoolRP.
   </footer>
 
 <!--
