--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </footer>
 
   <footer class="disclaimer-footer">
-  SRP Append Breaker is an independent project and is not affiliated with SchoolRP.
+  SRP Append Breaker is an independent, unofficial tool and is not affiliated with, endorsed by, sponsored by, or approved by SchoolRP. All trademarks and brand names are the property of their respective owners.
   </footer>
 
 <!--
